2017-12-05  Ken Brown  <kbrown@cornell.edu>

	* encoding.d (encoding_from_name) [UNIX_CYGWIN]: Use Unix line
	endings (patch#47).

2017-12-04  Jörg Höhle  <hoehle@users.sourceforge.net>

	* modules/regexp/regexi.c (REGEXP-COMPILE, REGEXP-EXEC) [UNICODE]:
	Use UTF-8 to communicate with gnulib/regexp, but keep
	O(misc_encoding) for locale-dependent error messages.

2017-12-04  Jörg Höhle  <hoehle@users.sourceforge.net>

	* modules/regexp/regexi.c (REGEXP-EXEC): Compute character string
	index based on the current O(misc_encoding).

2017-12-04  Sam Steingold  <sds@gnu.org>

	* configure.in: Move gl_EARLY before AC_LIB_PROG_LD to avoid aclocal
	warning: AC_COMPILE_IFELSE was called before AC_USE_SYSTEM_EXTENSIONS

2017-12-04  Sam Steingold  <sds@gnu.org>

	* configure: Ensure exit on a pipe sub-command failure (regression
	since 2017-02-26) by using bash/ksh/zsh-specific "set -o pipefail".

2017-12-04  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp: General cleanup.
	"465 exported symbols, 46 undocumented, 7 without pari function"

2017-12-03  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-doc): Respect command line options like
	make check-doc IMPNOTES=../doc/html/ CLHSROOT=http://clhs.lisp.se/
	(note the trailing slash!)

2017-12-01  Sam Steingold  <sds@gnu.org>

	Fix bug#659: update the pari module to PARI/GP 2.9.3
	* modules/pari/cpari.c (clisp_out, clisp_err): PariOUT no longer
	has the 4th field "die", instead set cb_pari_err_recover to...
	(clisp_err_recover): New function.
	* modules/pari/pari.lisp: Drop removed/Update renamed objects.
	(convert-to-pari@vector): Use #(...) for Vecsmall (immediate long[]).
	(convert-from-pari-vector): Handle Vecsmall.

2017-11-30  Jörg Höhle  <hoehle@users.sourceforge.net>

	* modules/i18n/gettext.c: CLISP_UNICODE is always defined in
	modules, so use #if, not #ifdef.

2017-11-29  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (finalize-coutput-file): Do not output unnecessary