@@ -1,3 +1,9 @@
+2017-12-05  Sam Steingold  <sds@gnu.org>
+
+	* utils/modprep.lisp (print-tables-2): Do not output unnecessary
+	prototypes, but output code to avoid the -Wunused-parameter warning.
+	Similar to the 2017-11-29 foreign1.lisp patch.
+
 2017-12-05  Ken Brown  <kbrown@cornell.edu>
 
 	* encoding.d (encoding_from_name) [UNIX_CYGWIN]: Use Unix line
